--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,7 +7,8 @@
 @import 'blog';
 @import 'skills';
 @import 'index';
-@import 'responsive';
+@import 'responsive-tablet';
+@import 'responsive-desktop';
 
 
 *{
