--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -1,3 +1,36 @@
+#profile .projects-a{
+
+    .container{
+        
+
+
+        .container1{
+            position: relative;
+            text-align: center;
+
+            img{
+                width: 100%;
+                object-fit: cover;
+                z-index: -1;
+            }
+    
+            .centered{
+                z-index: 99;
+                color: white;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+
+        }
+        
+    }
+}
+
+
+
 .projects{
     position: absolute;
     top: 10%;
@@ -40,22 +73,22 @@
     }
     
     
-    .container{
-        .container1{
+    // .container{
+    //     .container1{
 
        
 
 
-            .centered{
+    //         .centered{
     
     
-                color: white;
-            }
-        }
+    //             color: white;
+    //         }
+    //     }
 
 
 
-    }
+    // }
     
 
 
