--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -7,6 +7,11 @@
         margin: 5%;
     }
 
+
+    .skills-margin-b{
+        margin-bottom: 10%;
+    }
+
     
     
     
@@ -36,15 +41,31 @@
                 font-size: 1em;
                 
             }
+
+            #express{
+                width: 20vw;
+                // height: 34%;
+            }
+
+            #node{
+                width: 23vw;
+            }
+
+            #mongo{
+                width: 25vw;
+            }
+
+            
             
             
             
 
             img{
 
-                // width: 25vw;
+                width: 25vw;
                 height: 38%;
                 width: auto;
+
 
                 
             }
@@ -53,10 +74,14 @@
             //     height: 40%;
                 
             // }
+
+            // #express-p{
+            //     margin: 6%
+            // }
             
 
             p{
-                margin: 10% 0;
+                margin: 1em 0;
                 padding: 0;
                 font-size: 1em;
                 text-align: center;
