--- a/styles/style.css
+++ b/styles/style.css
@@ -1537,6 +1537,48 @@ footer .copyrights {
   }
 }
 
+.heading {
+  margin-top: 10vh;
+}
+
+.gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 8vh;
+}
+
+.gallery .mobile-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  text-align: center;
+}
+
+.gallery .mobile-images img {
+  max-width: 40vw;
+}
+
+.gallery .mobile-images .desc {
+  margin-bottom: 10vh;
+}
+
 * {
   margin: 0;
   padding: 0;
