pushing before new branch

--- a/styles/_wireframes.scss
+++ b/styles/_wireframes.scss
@@ -19,6 +19,9 @@
             max-width: 40vw;
             
         }
+        p{
+            font-weight: 500;
+        }
 
         // .rows{
 //             display: flex;
