--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Comfortaa:wght@300;400;500;600;700&family=Didact+Gothic&family=Dosis:wght@200;300;400;500;600;700;800&family=Maven+Pro:wght@400;500&family=Poppins:wght@100;200;300;400;500;600&family=Quicksand:wght@300;400;500;515;600;700&family=Raleway:wght@100;200;300;400;500&family=Teko:wght@300;400;500&display=swap');
 
 $feature:#ff61ba;
+// $feature:#006aff;
+
+
+
 
 
 
