--- a/styles/_responsive-desktop.scss
+++ b/styles/_responsive-desktop.scss
@@ -21,6 +21,28 @@
 
 
 
+    // wireframes
+    .gallery{
+
+        // width: 100vw;
+       
+        
+
+        .mobile-images{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            p{
+                font-size: 1rem;
+            }
+            img{
+                width: 10vw;
+            }
+        }
+    }
+
+
 
     .copyr{
         display: inline-block;
