--- a/styles/_responsive-tablet.scss
+++ b/styles/_responsive-tablet.scss
@@ -51,7 +51,18 @@
 
 
 
+    // wireframes
+    .gallery{
 
+        .mobile-images{
+
+
+            p{
+                font-size: 2rem;
+                font-weight: 500;
+            }
+        }
+    }
 
 
 
