--- a/styles/style.css
+++ b/styles/style.css
@@ -910,6 +910,10 @@ footer .copyrights {
   .mainnav li {
     font-size: 9vw;
   }
+  .gallery .mobile-images p {
+    font-size: 2rem;
+    font-weight: 500;
+  }
   h3 {
     font-size: 3.75em;
   }
@@ -1132,6 +1136,24 @@ footer .copyrights {
   }
   .col-12 {
     width: 100%;
+  }
+  .gallery .mobile-images {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .gallery .mobile-images p {
+    font-size: 1rem;
+  }
+  .gallery .mobile-images img {
+    width: 10vw;
   }
   .copyr {
     display: inline-block;
@@ -1573,6 +1595,10 @@ footer .copyrights {
 
 .gallery .mobile-images img {
   max-width: 40vw;
+}
+
+.gallery .mobile-images p {
+  font-weight: 500;
 }
 
 .gallery .mobile-images .desc {
