added links, styling

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -58,7 +58,7 @@
             font-family: 'raleway', sans-serif;
             font-size: 1em;
             
-            background-color: #ffd9f9;
+            background-color: rgba(0, 106, 255, 0.2);
             resize: none;
 
         }
