--- a/styles/_responsive-tablet.scss
+++ b/styles/_responsive-tablet.scss
@@ -54,7 +54,7 @@
     // wireframes
     .gallery{
 
-        .mobile-images{
+        .mobile-images, .tablet-images, .desktop-images{
 
 
             p{
