--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 h1:hover {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 h3 {
@@ -19,7 +19,7 @@ h3 {
 }
 
 h3:hover {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 h3, h4, p {
@@ -94,7 +94,7 @@ p {
 }
 
 .navbar #myLinks a:hover {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .navbar .nav-links, .navbar .logo {
@@ -153,7 +153,7 @@ p {
 }
 
 .navbar .hamburger-icon:hover {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .active {
@@ -187,10 +187,10 @@ p {
 
 #profile .resume-link {
   text-decoration: none;
-  color: #ff61ba;
+  color: #006aff;
   font-family: 'raleway', sans-serif;
   font-size: 1.25em;
-  border: 2px solid #ff61ba;
+  border: 2px solid #006aff;
   padding: 1.5% 10%;
   -webkit-box-shadow: 0.25em 0.25em 0 0;
           box-shadow: 0.25em 0.25em 0 0;
@@ -230,7 +230,7 @@ p {
 
 #profile ol li::before {
   font-weight: bold;
-  color: #ff61ba;
+  color: #006aff;
   content: counter(list) ".";
   left: -40px;
   position: absolute;
@@ -308,19 +308,19 @@ p {
 }
 
 .contact-parts .message-forms ::-webkit-input-placeholder {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .contact-parts .message-forms :-ms-input-placeholder {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .contact-parts .message-forms ::-ms-input-placeholder {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .contact-parts .message-forms ::placeholder {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .contact-parts .message-forms input[type=text], .contact-parts .message-forms select, .contact-parts .message-forms textarea {
@@ -331,7 +331,7 @@ p {
   height: 2.5em;
   font-family: 'raleway', sans-serif;
   font-size: 1em;
-  background-color: #ffd9f9;
+  background-color: rgba(0, 106, 255, 0.2);
   resize: none;
 }
 
@@ -347,8 +347,8 @@ p {
   font-family: 'raleway', sans-serif;
   font-size: 1em;
   color: white;
-  -webkit-box-shadow: 0.3em 0.3em 0 0 #ff61ba;
-          box-shadow: 0.3em 0.3em 0 0 #ff61ba;
+  -webkit-box-shadow: 0.3em 0.3em 0 0 #006aff;
+          box-shadow: 0.3em 0.3em 0 0 #006aff;
   border: none;
 }
 
@@ -383,8 +383,8 @@ p {
   margin-top: 5%;
   width: 78vw;
   line-height: 1.5;
-  -webkit-box-shadow: 0.3em 0.3em 0 0 #ff61ba;
-          box-shadow: 0.3em 0.3em 0 0 #ff61ba;
+  -webkit-box-shadow: 0.3em 0.3em 0 0 #006aff;
+          box-shadow: 0.3em 0.3em 0 0 #006aff;
 }
 
 footer {
@@ -426,7 +426,7 @@ footer ul li a:-webkit-any-link {
 }
 
 footer ul li a:-webkit-any-link:hover {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 footer .copyrights {
@@ -452,7 +452,7 @@ footer .copyrights {
 }
 
 .footer-icons li:hover {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .footer-icons p {
@@ -589,7 +589,7 @@ footer .copyrights {
 .blog-parts .container1 {
   position: relative;
   text-align: center;
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .blog-parts .container1 img {
@@ -630,7 +630,7 @@ footer .copyrights {
   width: 50vw;
   padding: 0.15em;
   padding-bottom: 0.25em;
-  border: 0.15em solid #ff61ba;
+  border: 0.15em solid #006aff;
 }
 
 .blog-parts .container1:hover img {
@@ -738,7 +738,7 @@ footer .copyrights {
   padding: 0;
   font-size: 1em;
   text-align: center;
-  color: #ff61ba;
+  color: #006aff;
 }
 
 #page-wrapper-i {
@@ -813,7 +813,7 @@ footer .copyrights {
 #page-wrapper-i .home-content .welcome {
   font-size: 0.65em;
   margin: 10% auto 15%;
-  border-bottom: 2px solid #ff61ba;
+  border-bottom: 2px solid #006aff;
   width: 80vw;
 }
 
@@ -839,7 +839,7 @@ footer .copyrights {
 #page-wrapper-i .menu-options ul .odd-item:hover {
   -webkit-box-shadow: 0.35em 0.35em 0 0 black;
           box-shadow: 0.35em 0.35em 0 0 black;
-  background-color: #ff61ba;
+  background-color: #006aff;
 }
 
 #page-wrapper-i .menu-options ul li {
@@ -854,8 +854,8 @@ footer .copyrights {
 
 #page-wrapper-i .menu-options ul li:hover {
   background-color: black;
-  -webkit-box-shadow: 0.5em 0.5em 0 0 #ff61ba;
-          box-shadow: 0.5em 0.5em 0 0 #ff61ba;
+  -webkit-box-shadow: 0.5em 0.5em 0 0 #006aff;
+          box-shadow: 0.5em 0.5em 0 0 #006aff;
 }
 
 #page-wrapper-i .menu-options ul li:hover a {
@@ -864,7 +864,7 @@ footer .copyrights {
 
 #page-wrapper-i .menu-options ul li a {
   text-decoration: none;
-  color: #ff61ba;
+  color: #006aff;
   font-family: 'raleway', sans-serif;
   font-size: 1em;
 }
@@ -910,7 +910,7 @@ footer .copyrights {
   .mainnav li {
     font-size: 9vw;
   }
-  .gallery .mobile-images p {
+  .gallery .mobile-images p, .gallery .tablet-images p, .gallery .desktop-images p {
     font-size: 2rem;
     font-weight: 500;
   }
@@ -965,7 +965,7 @@ footer .copyrights {
   #profile .resume-link {
     font-size: 4vw;
     padding: 2.5% 10% 3.5%;
-    border: 3px solid #ff61ba;
+    border: 3px solid #006aff;
   }
   #profile .resume {
     margin: 17% 0 5% 0;
@@ -987,8 +987,8 @@ footer .copyrights {
     margin-bottom: 5%;
   }
   #page-wrapper-i .menu-options ul li {
-    -webkit-box-shadow: 0.35em 0.35em 0 0 #ff61ba;
-            box-shadow: 0.35em 0.35em 0 0 #ff61ba;
+    -webkit-box-shadow: 0.35em 0.35em 0 0 #006aff;
+            box-shadow: 0.35em 0.35em 0 0 #006aff;
   }
   #page-wrapper-i .menu-options ul li:hover {
     -webkit-box-shadow: 0.35em 0.35em 0 0 black;
@@ -1056,8 +1056,8 @@ footer .copyrights {
   .contact-parts .message-forms input[type=submit] {
     font-size: 1.75em;
     height: 5.5vh;
-    -webkit-box-shadow: 0.3em 0.35em 0 0 #ff61ba;
-            box-shadow: 0.3em 0.35em 0 0 #ff61ba;
+    -webkit-box-shadow: 0.3em 0.35em 0 0 #006aff;
+            box-shadow: 0.3em 0.35em 0 0 #006aff;
   }
   .contact-parts .details {
     height: 40vh;
@@ -1069,11 +1069,11 @@ footer .copyrights {
     font-size: 2.5em;
   }
   .contact-parts .details .c-details {
-    -webkit-box-shadow: 0.5em 0.55em 0 0 #ff61ba;
-            box-shadow: 0.5em 0.55em 0 0 #ff61ba;
+    -webkit-box-shadow: 0.5em 0.55em 0 0 #006aff;
+            box-shadow: 0.5em 0.55em 0 0 #006aff;
   }
   .skills h4 {
-    color: #ff61ba;
+    color: #006aff;
   }
   .skills .skills-row .skill-item img {
     height: 10.5em;
@@ -1424,7 +1424,7 @@ footer .copyrights {
     padding: 0;
   }
   .blog-parts h3:hover {
-    color: #ff61ba;
+    color: #006aff;
   }
   .blog-parts .img-first {
     margin-top: 10%;
@@ -1459,8 +1459,8 @@ footer .copyrights {
        object-fit: cover;
     width: 60vw;
     height: 20vw;
-    -webkit-box-shadow: 6px 7px 0px 0px #ff61ba;
-            box-shadow: 6px 7px 0px 0px #ff61ba;
+    -webkit-box-shadow: 6px 7px 0px 0px #006aff;
+            box-shadow: 6px 7px 0px 0px #006aff;
   }
   .blog-parts .container .container1 .centered h6 {
     width: 100%;
@@ -1516,7 +1516,7 @@ footer .copyrights {
     font-size: 5vh;
   }
   footer ul li a:-webkit-any-link:hover {
-    color: #ff61ba;
+    color: #006aff;
   }
   .contact-parts {
     top: 20%;
@@ -1560,7 +1560,7 @@ footer .copyrights {
 }
 
 .heading {
-  margin-top: 10vh;
+  margin: 10vh 0;
 }
 
 .gallery {
@@ -1574,7 +1574,6 @@ footer .copyrights {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 8vh;
 }
 
 .gallery .mobile-images {
@@ -1602,6 +1601,62 @@ footer .copyrights {
 }
 
 .gallery .mobile-images .desc {
+  margin-bottom: 10vh;
+}
+
+.gallery .tablet-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  text-align: center;
+}
+
+.gallery .tablet-images img {
+  max-width: 40vw;
+}
+
+.gallery .tablet-images p {
+  font-weight: 500;
+}
+
+.gallery .tablet-images .desc {
+  margin-bottom: 10vh;
+}
+
+.gallery .desktop-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  text-align: center;
+}
+
+.gallery .desktop-images img {
+  max-width: 80vw;
+}
+
+.gallery .desktop-images p {
+  font-weight: 500;
+}
+
+.gallery .desktop-images .desc {
   margin-bottom: 10vh;
 }
 
@@ -1644,7 +1699,7 @@ body {
 }
 
 .logo h1:hover {
-  color: #ff61ba;
+  color: #006aff;
 }
 
 .feature-icon {
