--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -1,4 +1,6 @@
-#profile .projects-a{
+.projects-a{
+    position: absolute;
+    top: 5%;
 
     .container{
         
@@ -12,6 +14,8 @@
                 width: 100%;
                 object-fit: cover;
                 z-index: -1;
+                height: 20vh;
+                padding-bottom: 3%;
             }
     
             .centered{
@@ -34,7 +38,6 @@
 .projects{
     position: absolute;
     top: 10%;
-    // background-color: palegreen;
 
     p{
         font-size: 1em;
@@ -58,37 +61,9 @@
         justify-content: center;
         object-fit: cover;
         
-        &:hover{
-            opacity: 0.65;
-
-            .centered{
-                color: black;
-
-
-            }
-            
-            
-        }
 
     }
     
-    
-    // .container{
-    //     .container1{
-
-       
-
-
-    //         .centered{
-    
-    
-    //             color: white;
-    //         }
-    //     }
-
-
-
-    // }
     
 
 
