--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -100,8 +100,7 @@
        
         width: 100%;
         height: 35vh;
-        margin-top: 2%;
-        padding: 9% 0% 0 11%;
+        padding: 0 0 0 11%;
 
         display: flex;
         flex-direction: column;
